--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
   <!-- Optionally include global styles -->
   <link rel="stylesheet" href="../src/styles/slides.css">
+  <meta name="google-site-verification" content="5E-tuUoh7bzBuEUEpLU3iWH55XhnZ7VQWKI69vNHcNo" />
 </head>
 <body>
   <!-- React mounts here -->
