--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="canonical" href="https://akeyreu.com/" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Add favicon -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
